@@ -1,3 +1,13 @@
+2011-01-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Align import/export directives
+        https://bugs.webkit.org/show_bug.cgi?id=52208
+
+        * Shared/API/c/WKBase.h: Align import/export directives with
+        JavaScriptCore/API/JSBase.h.
+
 2011-01-14  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
